tests/typechecker/should_fail/parser_let_external_defined.csp
P = let
		external chase
	within P